--- a/css/fonts.css
+++ b/css/fonts.css
@@ -129,12 +129,35 @@ nav a{
 	font-size:20px;
 }
 
+
+
+
+.footer-content{
+	color:#FCFE23;
+}
+
+.address span{
+	font:16px SansProLight;
+}
+
+.address i{
+	font-size:16px;
+}
 .social-footer i{
 	font-size:18px;
 	color:green;
 }
 
+.pe-7s-call, .pe-7s-mail-open-file, .pe-7s-map-2{
+	font-size:18px;
+}
 
-.footer-content{
+.company span,.news span{
+	font:16px SansProRegular;
 	color:green;
+}
+
+.company ul li, .news ul li{
+	font:16px SansProLight;
+	color:#28FF3E;
 }
