--- a/css/fontsSinglePost.css
+++ b/css/fontsSinglePost.css
@@ -94,3 +94,9 @@ article .article-tags i{
 	word-spacing: -0.06em;
 	color:red;
 }
+
+.article-comments input:last-of-type{
+	font:12px SansProRegular;
+	letter-spacing:0.3em;
+	color:red;
+}
